Skip user gesture creation during RenderFrameImpl navigation commit.

|RenderFrameImpl::CommitNavigation*| functions got |WebScopedUserGesture|s few
years ago to fix a PasswordManager test (crrev.com/2378393002).  Those artificial
user gesture tokens seem to have become redundant in the meantime through changes
in navigation and/or PasswordManager.  This CL removes those tokens because they
are causing popup-blocker failure with UAv2.

Bug: 865243
Change-Id: I6ed7d73a5784f82ce3ba695067a4cbff0a9c24b4
Reviewed-on: https://chromium-review.googlesource.com/c/1323626
Commit-Queue: Mustaq Ahmed <mustaq@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Camille Lamy <clamy@chromium.org>
Reviewed-by: Charlie Harrison <csharrison@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607233}
Former-commit-id: efa963a8c9db46d9ef23898ebdb6f07252f33cb6